tests/sumo/spec/departure/errors/slow_lane_ahead_ignore/errors.sumo.agg
Warning: 1 total messages of type: Vehicle '%' is inserted too fast and will violate the speed limit on a lane '%'.
